--- a/lectures/wikipedia.bib
+++ b/lectures/wikipedia.bib
@@ -204,3 +204,10 @@ note = "[Online; accessed 20-September-2024]"
     howpublished = "\url{https://en.wikipedia.org/w/index.php?title=TeX&oldid=1253226188}",
     note = "[Online; accessed 15-November-2024]"
 }
+@misc{enwiki:1256072917,
+    author = "{Wikipedia contributors}",
+    title = "Common Vulnerabilities and Exposures --- {Wikipedia}{,} The Free Encyclopedia",
+    year = "2024",
+    howpublished = "\url{https://en.wikipedia.org/w/index.php?title=Common_Vulnerabilities_and_Exposures&oldid=1256072917}",
+    note = "[Online; accessed 17-November-2024]"
+}
